--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,12 @@ license = "MIT"
 python = "^3.10"
 pyproj = "^3.3.0"
 Shapely = "^2.0.1"
-click = "^8.1.2"
-pyshp = "^2.2.0"
+click = "^8.1.7"
+pyshp = "^2.3.1"
 map-engraver = {git = "https://github.com/leifgehrmann/map-engraver.git"}
 
-[tool.poetry.dev-dependencies]
-flake8 = "^4.0.1"
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.1.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
